# ece2031-proj

./: .gitignore  README.md  ShortestPathTest.java  appendixes.doc  appendixes.odt  hello.sh  output.csv
DE2Bot_v3_Fall15/: CalcDecDeg,asm  CalcDecDist.asm  DE2Bot.asm.rpt  DE2Bot.done  DE2Bot.fit.rpt  DE2Bot.fit.summary  DE2Bot.flow.rpt  DE2Bot.map.rpt  DE2Bot.map.summary  DE2Bot.mif_update.rpt  DE2Bot.pof  DE2Bot.qws  DE2Bot.sof  DE2Bot.tan.rpt  Direction.asm  Direction.mif  LeftTurnTest.asm  Motion.asm  Motion.mif  ODOMETRY.vhd  PathFinding.asm  PathFinding.mif  PointAndShoot.asm  RightTurnTest.asm  RightTurnTest.mif  RobotSpeedTest.asm  SCOMP.vhd  SimpleRobotProgram.asm  SimpleRobotProgram.mif  StartingCodeWithLog.asm  Test.asm  Test.mif  test.cpp
DE2Bot_v3_Fall15/db/: DE2Bot.(0).cnf.hdb  DE2Bot.(110).cnf.hdb  DE2Bot.(112).cnf.hdb  DE2Bot.(122).cnf.hdb  DE2Bot.(123).cnf.hdb  DE2Bot.(129).cnf.cdb  DE2Bot.(129).cnf.hdb  DE2Bot.(16).cnf.hdb  DE2Bot.(27).cnf.hdb  DE2Bot.(53).cnf.hdb  DE2Bot.(6).cnf.cdb  DE2Bot.(6).cnf.hdb  DE2Bot.(69).cnf.hdb  DE2Bot.(8).cnf.cdb  DE2Bot.(8).cnf.hdb  DE2Bot.(89).cnf.hdb  DE2Bot.(90).cnf.hdb  DE2Bot.asm.qmsg  DE2Bot.asm.rdb  DE2Bot.cbx.xml  DE2Bot.cmp.bpm  DE2Bot.cmp.cdb  DE2Bot.cmp.hdb  DE2Bot.cmp.rdb  DE2Bot.cmp0.ddb  DE2Bot.db_info  DE2Bot.hier_info  DE2Bot.hif  DE2Bot.map.bpm  DE2Bot.map.cdb  DE2Bot.map.hdb  DE2Bot.map.kpt  DE2Bot.map_bb.cdb  DE2Bot.map_bb.hdb  DE2Bot.mif_update.qmsg  DE2Bot.pre_map.cdb  DE2Bot.pre_map.hdb  DE2Bot.rtlv.hdb  DE2Bot.rtlv_sg.cdb  DE2Bot.rtlv_sg_swap.cdb  (+11 more)
DE2Bot_v3_Fall15/incremental_db/compiled_partitions/: DE2Bot.root_partition.cmp.cdb  DE2Bot.root_partition.cmp.hdb  DE2Bot.root_partition.cmp.rcfdb  DE2Bot.root_partition.cmp.re.rcfdb  DE2Bot.root_partition.map.cdb  DE2Bot.root_partition.map.dpi  DE2Bot.root_partition.map.hdb  DE2Bot.root_partition.map.kpt  DE2Bot.root_partition.merge_hb.atm
oldFunctionTester/: circleMotion.m  functionA.m  functionB.m  functionC.m  functionD.m  normalizeAngle.m  plotSimulationResults.m  radiusOfRotation.m  runSimulation.m
simulation/: Algorithm.hpp  ByteArray.cpp  ByteArray.hpp  CMakeLists.txt  Config.hpp  Encode.cpp  Encode.hpp  Line.hpp  Matrix3.hpp  MifParse.cpp  MifParse.hpp  Optional.hpp  SComp.cpp  SComp.hpp  Util.hpp  Vector.hpp  parsemif.cpp  sim.cpp
spline/ndcrdspinterp/: crdatnplusoneval.m  evalcrdnd.m  main.m  readme.txt  reference.txt
